Updated DaDaBiK script installer to version 4.2, WordPress to 2.1.1, phpMyAdmin to 2.10.0, phpList to 2.11.3, and MediaWiki to version 1.9.3.
Added a button to the Edit Extra Administrator page for switching to his Webmin login without needing to know the password.
Added the --primary-ip option to create-domain.pl, to create an SSL domain on the primary IP.
Added the Shared IP Addresses page under System Configuration for defining additional shared addresses that can be selected when creating servers without a private IP. Also updated the server creation page to allow selection of one of these shared IPs, and the create-domain.pl program to use one with the --shared-ip parameter.
Added the New Reseller Email page, for setting up a message to be sent to new reseller accounts.
Added the --email parameter to create-reseller.pl and modify-reseller.pl scripts.
Updated many script installers to support PHP 5.
All autoreply email message files are now hard linked to from /var/virtualmin-autoreply, and this path is used in the autoresponders. This allows them to continue working even when a domain's home directory is not world-readable.
Fixed bug that broke renaming of virtual servers when using debian-style sites-enabled directory for the Apache config.
Fixed bug that prevented autoresponders from being updated properly when renaming or moving virtual servers.
Fixed the Nucleus script installer so that it actually works, and increased version to 3.24.
Fixed the b2evolution script installer to correctly use it's built-in scripts for setting up the config files and database.
---- Changes since 3.36 ----
Increased version of Gallery script installer to 2.2-rc-2.
Change the Module Config option for the Upload and Download module to limit to uploads only.
Replaced the HTMLarea widget for editing web pages with Xinha, when using Webmin 1.332 or later.
Updated Zenphot script installer to version 1.0.8.2.