@@ -1898,7 +1898,9 @@ newbw_maillogfile=Log file
 newbw_emaillog=Mail server log file does not exist
 newbw_rotated=Include old rotated log files?
 newbw_month=Month
-newbw_header=Bandwidth monitoring options
+newbw_header1=Period, schedule and email
+newbw_header2=Email messages
+newbw_header3=Servers and log files
 newbw_servers=Servers to check
 newbw_servers0=All servers
 newbw_servers1=Selected servers ..
