@@ -121,7 +121,8 @@ $cacheclient = &get_domain_spam_client($d);
 
 # Check if the user is approaching his quota
 @users = &list_domain_users($d, 0, 1, 0, 1);
-($user) = grep { $_->{'user'} eq $ARGV[0] } @users;
+($user) = grep { $_->{'user'} eq $ARGV[0] ||
+		 &replace_atsign($_->{'user'}) eq $ARGV[0] } @users;
 if (!$user) {
 	# Couldn't find him?! So do the spam check
 	$cachespam = $d->{'id'};
